updates to file ops, handle more errors, begin test framework
